# agent-bench

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agent_bench/: __init__.py  aggregator.py  cli.py  clients.py  container_cli.py  external.py  manifest.py  models.py  prompts.py  proxy.py  reports.py  runner.py  sandbox.py  statuses.py  tasks.py  tool_parsers.py  verifiers.py
docker/: benchmark_probe.py  external-benchmark.Dockerfile  external_launcher.sh  sandbox.Dockerfile
tasks/: README.md  analytical_reasoning.json  benchmark_citations.bib  code_recall.json  coding.json  mathematical_reasoning.json  planning.json  probability.json  public_benchmarks.json  system_design.json
tasks/_metadata/: nemotron-3-puzzle-benchmarks.json
tasks/bigcodebench/: README.md  assets.lock.json  manifest.json
tasks/claw-eval/: README.md  assets.lock.json  manifest.json
tasks/codeneedle/: README.md  assets.lock.json  manifest.json
tasks/deep-swe/: README.md  assets.lock.json  manifest.json
tasks/exploitbench/: README.md  assets.lock.json  manifest.json
tasks/finance-agent-v2/: README.md  assets.lock.json  manifest.json
tasks/financemath/: README.md  assets.lock.json  manifest.json
tasks/finmcp-bench/: README.md  assets.lock.json  (+1 more)
tests/: test_benchmark_probe.py  test_cli.py  test_container_cli.py  test_exploitbench_harness.py  test_external.py  test_manifest.py  test_prompts.py  test_proxy.py  test_reports_cli.py  test_runner.py  test_sandbox_docker.py  test_sandbox_tempdir.py  test_tasks.py  test_tool_parsers.py  test_verifiers.py
(+191 files in other folders)
