[project]
name = "agent-bench"
version = "0.1.0"
description = "Asynchronous benchmark runner for remote language models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
agent-bench = "agent_bench.cli:main"
bench = "agent_bench.container_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_bench*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "docker: tests that require Docker and the sandbox image",
]
